--- a/RecipeWebsite/MyRecipe.html
+++ b/RecipeWebsite/MyRecipe.html
@@ -12,26 +12,76 @@
 </head>
 
 <body>
-	<header>
-		<div class="left">
-			<ul>
-				<li><a href="">Popular Recipes</a></li>
-				<li><a href="">What's New</a></li>
-			</ul>	
-		</div>
-		
-		<div class="right">
-			<ul>
-				<li><a href="">Categories</a></li>
-				<li><a href="">Meal Ideas</a></li>
-			</ul>	
+	<!-- HEADER -->
+		<header>
+			<div class="left">
+				<ul>
+					<li><a href="">Popular Recipes</a></li>
+					<li><a href="">What's New</a></li>
+				</ul>	
+			</div>
+			
+			<div class="right">
+				<ul>
+					<li><a href="">Categories</a></li>
+					<li><a href="">Meal Ideas</a></li>
+				</ul>	
+			</div>
+
+			<div id="logo">
+				<img src="img/chefs-hat.png">
+				<p>MyRecipes</p>
+			</div>
+
+		</header>
+
+	<!-- BODY -->
+		<div id="main">
+			<p>Join our email club</p>
+			<p>Sign Up Now</p>
+
+			<form>
+				<input id="email" type="email" name="email" placeholder=" enter your email">
+				<input id="click" type="button" name="submit" value="CLICK HERE">
+			</form>
 		</div>
 
-		<div id="logo">
-			<img src="img/chefs-hat.png">
-			<p>MyRecipes</p>
+		<div class="cf">
+			<div class="box"> 
+				<a href="" title="" >
+					<img src="img/pizza.jpg">
+					<p>Vegetarian?</p>
+				</a>
+			</div>
+
+			<div class="box middle"> 
+				<a href="" title="" >
+					<img src="img/pasta.jpg">
+					<p>5 Minute Meals</p>
+				</a>
+			</div>
+
+			<div class="box"> 
+				<a href="" title="" >
+					<img src="img/diet.jpg">
+					<p>Diet Recipes</p>
+				</a>
+			</div>
 		</div>
 
-	</header>
+	<!-- FOOTER -->
+		<footer>
+			<img src="img/cutlery.png">
+			
+			<nav>
+				<ul>
+					<li><a href="">About Us</a></li>
+					<li><a href="">Contact Us</a></li>
+					<li><a href="">Suggest a Recipe</a></li>
+					<li><a href="">Privacy</a></li>
+				</ul>
+			</nav>
+		</footer>
+
 </body>
 </html>
