--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<h1><a href="RecipeWebsite/MyRecipe.html">Open Recipe Website</a></h1>
+	<h1><a href="UniversityWebsite/MyUniversity.html">Open Univeristy Website</a></h1>
 
 </body>
 </html>
