--- a/UniversityWebsite/MyUniversity.html
+++ b/UniversityWebsite/MyUniversity.html
@@ -8,8 +8,11 @@
 	<!-- Allows for adaptive viewing on different device types -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<!-- Normalise.css -->
+	<link rel="stylesheet" type="text/css" href="css/normalise.css">
+
 	<!-- Stylesheet -->
-	<link rel="stylesheet" type="text/css" href="MyUniversity.css">
+	<link rel="stylesheet" type="text/css" href="css/MyUniversity.css">
 
 	<!-- HTML5 Shiv -->
 	<script src="js/html5shiv.js"></script>
@@ -55,39 +58,63 @@
 				<img src="img/magnifying.png">
 				Take a Tour
 				</a>
-				</div>	
+			</div>	
+
 			<div class="buttons"><a href="">
 				<img src="img/arrow.png">
 				Success Stories
 				</a>
-				</div>
+			</div>
+
 			<div class="buttons"><a href="">
 				<img src="img/calendar.png">
 				Important Dates
 				</a>
-				</div>	
+			</div>	
 		</div>
 
 		<div class="row1-2">
 			<p>Browse Our Most Popular Courses <span><a href="">Here</a></span></p>
 		</div>
 
-		<div>
-			<p>Want to know more about life at MyUniversity</p>
-			<p>See what our former students have to say</p>
+		<div class="row2">
+			<div>
+				<p>Want to know more about life at MyUniversity</p>
+				<p>See what our former students have to say</p>
+			</div>
+
+			<div class="tom">
+				<img src="img/man.png">
+				<p>Tom's Story</p>
+			</div>
+
+			<div class="sarah">
+				<img src="img/woman.png">
+				<p>Sarah's Story</p>
+			</div>
 		</div>
 
-		<div class="tom">
-			<img src="img/man.png">
-			<p>Tom's Story</p>
-		</div>
-
-		<div class="sarah">
-			<img src="img/woman.png">
-			<p>Sarah's Story</p>
+		<div class="row3">
+			<div class="row3-1">
+				<p>Discover our state of the art facilities <span><a href="">Here</a></span></p>
+			</div>
+			<div class="row3-2">
+				<img src="img/volleyball.jpg">
+			</div>
 		</div>
 	</main>
 	<!-- FOOTER -->
-	<nav></nav>
+	<footer>
+		<nav>
+			<ul>
+				<li><a href="">COURSE FINDER</a></li>
+				<li><a href="">WHY US?</a></li>
+				<li><a href="">HOW TO APPLY</a></li>
+			</ul>
+		</nav>
+
+		<p>&copy; MyCollege 2019</p>
+	</footer>
+	
 </body>
 </html>
